--- a/src/composer.json
+++ b/src/composer.json
@@ -15,7 +15,8 @@
     "php-di/php-di": "^7.0",
     "symfony/console": "^7.0",
     "symfony/twig-bridge": "^7.0",
-    "symfony/webpack-encore-bundle": "^2.1"
+    "symfony/webpack-encore-bundle": "^2.1",
+    "slim/csrf": "^1.4"
   },
   "autoload": {
     "psr-4": {
